260129 유나이티드 메뉴 오버플로우 해결

--- a/united/css/layout.css
+++ b/united/css/layout.css
@@ -30,6 +30,9 @@ header .logo a{
 header .gnb .gnb_open{
     display: none;
 }
+header .gnb .gnb_wrap {
+    overflow-y: auto;
+}
 header .gnb .gnb_wrap .gnb_close {
     display: none;
 }
